--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -72,6 +72,7 @@
      <Compile Include="Assets\Scripts\CSharpScripts\YellowCar.cs" />
      <Compile Include="Assets\Scripts\CSharpScripts\YellowCarAI.cs" />
      <Compile Include="Assets\Shield Pack Free\MouseRotationScript.cs" />
+     <Compile Include="Assets\VolumeManager.cs" />
      <Compile Include="Assets\~AlternatePhysicsModel\Scripts\AerodynamicResistance.cs" />
      <Compile Include="Assets\~AlternatePhysicsModel\Scripts\AntiRollBar.cs" />
      <Compile Include="Assets\~AlternatePhysicsModel\Scripts\CarController.cs" />
